--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
         "user": "gustave",
         "pass": "b4DJz884%71jGPi"
     },
-    "transmission" : {
+    "kodi" : {
         "host" : "localhost",
         "port" : 9090
     },
@@ -18,6 +18,7 @@
     },
 
     "RSS": [
-        "http://showrss.info/feeds/5.rss"
+        "http://showrss.info/feeds/5.rss",
+        "http://showrss.info/feeds/213.rss"
     ]
 }
